All changes related to project

--- a/Configuration/config file.ipynb
+++ b/Configuration/config file.ipynb
@@ -20,14 +20,14 @@
    "source": [
     "class ConfigModule():\n",
     "\n",
-    "    def __init__(self, env):\n",
+    "    def __init__(self):\n",
     "        self.base_file_path = spark.sql(\"describe external location data\").select(\"url\").collect()[0][0]\n",
     "        self.base_checkpoint_path = spark.sql(\"describe external location checkpoint\").select(\"url\").collect()[0][0]\n",
     "        self.db_name = \"hc_db\"\n",
-    "        self.environment = env\n",
+    "        self.environment = \"dev\"\n",
     "        self.kafka_bootstrap_servers = \"pkc-56d1g.eastus.azure.confluent.cloud:9092\"\n",
-    "        self.kafka_username = \"VLQDG7OL4WTMPQL6\"\n",
-    "        self.kafka_password = \"2M8K4ur6xHRDkyQ4f0F6eTt5ghjiEEnl+DPP5ysWWSd/BFrv9kMOK3BdclyGP6mw\"\n",
+    "        self.kafka_username = \"IQLFWRUUYGHKVNBZ\"\n",
+    "        self.kafka_password = \"b2O6KSqoM/GJUZwXo5kxRRwZiTq+To5YbU1zTtXXifekjIicRcFMt4UgpszGFFS3\"\n",
     "\n",
     "\n"
    ]
