--- a/Configuration/helper file.ipynb
+++ b/Configuration/helper file.ipynb
@@ -44,12 +44,30 @@
     "class SetupHelper():\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.conf = ConfigModule('dev')\n",
-    "        self.data_dir = f\"{self.conf.base_file_path}/data\"\n",
-    "        self.checkpoint_dir = f\"{self.conf.base_checkpoint_path}/checkpoint\"\n",
-    "        self.catalog = self.conf.environment\n",
-    "        self.schema = self.conf.db_name\n",
+    "        conf = ConfigModule()\n",
+    "        self.data_dir = f\"{conf.base_file_path}/data\"\n",
+    "        self.checkpoint_dir = f\"{conf.base_checkpoint_path}/checkpoint\"\n",
+    "        self.catalog = conf.environment\n",
+    "        self.schema = conf.db_name\n",
     "        self.database_intialize = False\n",
+    "\n",
+    "    def cleanup(self):\n",
+    "        a = input('Do you want to cleanup the database and data/checkpoint locations? (y/n): ')\n",
+    "        if a.lower()=='y':\n",
+    "            print('Cleaning process:', )\n",
+    "            print(f'\\tDropping database {self.catalog}.{self.schema} ...', end='')\n",
+    "            spark.sql(f\"DROP DATABASE IF EXISTS {self.catalog}.{self.schema} CASCADE\")\n",
+    "            print('Done.')\n",
+    "            '''print(f'\\tDeleting & recreate data_dir {self.data_dir} ...', end='')\n",
+    "            dbutils.fs.rm(self.data_dir, True)\n",
+    "            dbutils.fs.mkdirs(self.data_dir)\n",
+    "            print('Done.')'''\n",
+    "            print(f'\\tDeleting & recreate checkpoint_dir {self.checkpoint_dir} ...', end='')\n",
+    "            dbutils.fs.rm(self.checkpoint_dir, True)\n",
+    "            dbutils.fs.mkdirs(self.checkpoint_dir)\n",
+    "            print('Done.')\n",
+    "        else:\n",
+    "            print('Skipping cleaning process!!!')\n",
     "    \n",
     "    def create_database(self):\n",
     "        spark.catalog.clearCache()\n",
@@ -139,19 +157,16 @@
     "            print(f\"\\tCreating table {self.catalog}.{self.schema}.sl_user_profile...\", end='')\n",
     "            spark.sql(f\"\"\"CREATE TABLE IF NOT EXISTS {self.catalog}.{self.schema}.sl_user_profile (\n",
     "                        user_id bigint,\n",
-    "                        update_type string,\n",
     "                        timestamp timestamp,\n",
-    "                        dob string,\n",
+    "                        dob date,\n",
     "                        sex string,\n",
     "                        gender string,\n",
     "                        first_name string,\n",
     "                        last_name string,\n",
-    "                        address struct <\n",
-    "                                        street_address string,\n",
-    "                                        city string,\n",
-    "                                        state string,\n",
-    "                                        postalcode bigint\n",
-    "                                        >\n",
+    "                        street_address string,\n",
+    "                        city string,\n",
+    "                        state string,\n",
+    "                        zip bigint\n",
     "                    )\"\"\")\n",
     "            print('Done.')\n",
     "        else:\n",
@@ -175,7 +190,7 @@
     "            spark.sql(f\"\"\"CREATE TABLE IF NOT EXISTS {self.catalog}.{self.schema}.sl_workout_session (\n",
     "                        user_id bigint,\n",
     "                        workout_id bigint,\n",
-    "                        timestmap timestamp,\n",
+    "                        timestamp timestamp,\n",
     "                        action string,\n",
     "                        session_id bigint\n",
     "                    )\"\"\")\n",
@@ -183,27 +198,14 @@
     "        else:\n",
     "            raise ReferenceError('Database not initialized')\n",
     "    \n",
-    "    \n",
-    "    def create_workout_session_sl(self):\n",
-    "        if self.database_intialize:\n",
-    "            print(f\"\\tCreating table {self.catalog}.{self.schema}.sl_workout_session...\", end='')\n",
-    "            spark.sql(f\"\"\"CREATE TABLE IF NOT EXISTS {self.catalog}.{self.schema}.sl_workout_session (\n",
-    "                        user_id bigint,\n",
-    "                        workout_id bigint,\n",
-    "                        timestmap timestamp,\n",
-    "                        action string,\n",
-    "                        session_id bigint\n",
-    "                    )\"\"\")\n",
-    "            print('Done.')\n",
-    "        else:\n",
-    "            raise ReferenceError('Database not initialized')\n",
     "    \n",
     "    def create_user_bins_sl(self):\n",
     "        if self.database_intialize:\n",
     "            print(f\"\\tCreating table {self.catalog}.{self.schema}.sl_user_bins...\", end='')\n",
     "            spark.sql(f\"\"\"CREATE TABLE IF NOT EXISTS {self.catalog}.{self.schema}.sl_user_bins (\n",
     "                        user_id bigint,\n",
-    "                        age int,\n",
+    "                        device_id bigint,\n",
+    "                        age string,\n",
     "                        gender string,\n",
     "                        city string,\n",
     "                        state string\n",
@@ -251,11 +253,10 @@
     "                        date date,\n",
     "                        workout_id bigint,\n",
     "                        session_id bigint,\n",
-    "                        age int,\n",
-    "                        sec string,\n",
+    "                        age string,\n",
+    "                        sex string,\n",
     "                        city string,\n",
     "                        state string,\n",
-    "                        rec int,\n",
     "                        min_bpm double,\n",
     "                        avg_bpm double,\n",
     "                        max_bpm double\n",
@@ -266,15 +267,40 @@
     "    \n",
     "    def create_gym_summary_gd(self):\n",
     "        if self.database_intialize:\n",
-    "            print(f\"\\tCreating table {self.catalog}.{self.schema}.gd_gym_summary...\", end='')\n",
-    "            pass\n",
+    "            print(f\"\\tCreating temp view {self.catalog}.{self.schema}.gd_gym_summary...\", end='')\n",
+    "            spark.sql(\"\"\" create or replace view dev.hc_db.gd_gym_summary  as(\n",
+    "                            with list_of_workouts as (\n",
+    "                                    select user_id, collect_list(workout_id) as workout_list \n",
+    "                                    from dev.hc_db.sl_complete_workout\n",
+    "                                    group by user_id),\n",
+    "\n",
+    "                                min_in_gym as (\n",
+    "                                    select b.user_id, gym, a.mac_address, login, logout, round(((unix_timestamp(logout)-unix_timestamp(login))/60),2) as minutes_in_gym, to_date(login) as date\n",
+    "                                    from dev.hc_db.sl_gym_logins a\n",
+    "                                    left join dev.hc_db.sl_users b on a.mac_address=b.mac_address),\n",
+    "\n",
+    "                                min_in_exe_per_workout_id as(\n",
+    "                                    select user_id, workout_id, session_id, \n",
+    "                                    round(((unix_timestamp(end_time)-unix_timestamp(start_time))/60),2) as minutes_in_exe, to_date(start_time) as date \n",
+    "                                    from dev.hc_db.sl_complete_workout),\n",
+    "\n",
+    "                                min_in_exe as(\n",
+    "                                    select user_id, date, sum(minutes_in_exe) as minutes_in_exe \n",
+    "                                    from min_in_exe_per_workout_id \n",
+    "                                    group by user_id, date)\n",
+    "\n",
+    "                            select a.gym, a.mac_address, a.date, b.workout_list, a.minutes_in_gym, c.minutes_in_exe\n",
+    "                            from min_in_gym a\n",
+    "                            left join list_of_workouts b on a.user_id = b.user_id\n",
+    "                            left join min_in_exe c on a.user_id = c.user_id);\"\"\")\n",
     "            print('Done.')\n",
     "        else:\n",
     "            raise ReferenceError('Database not initialized')\n",
     "    \n",
     "    def launcher(self):\n",
-    "        print('Started setup process: ')\n",
     "        start_time = time.time()\n",
+    "        self.cleanup()\n",
+    "        print('Started creating tables & views: ')\n",
     "        self.create_database()\n",
     "        self.create_registered_user_bz()\n",
     "        self.create_gym_logins_bz()\n",
@@ -310,55 +336,18 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "Do you want to cleanup the database and data/checkpoint locations? (y/n):  y"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cleaning process:\n\tDropping database dev.hc_db ...Done.\n\tDeleting & recreate checkpoint_dir abfss://hc-unmanaged-dev@healthcarelakestorage.dfs.core.windows.net/checkpoint_zone/checkpoint/cp_gym_logins ...Done.\nStarted setup process: \n\tCreating database dev.hc_db ...Done.\n\tCreating table dev.hc_db.bz_registered_users...Done.\n\tCreating table dev.hc_db.bz_gym_logins...Done.\n\tCreating table dev.hc_db.bz_kafka_multiplex...Done.\n\tCreating table dev.hc_db.sl_users...Done.\n\tCreating table dev.hc_db.sl_workout_session...Done.\n\tCreating table dev.hc_db.sl_user_bins...Done.\n\tCreating table dev.hc_db.sl_gym_logins...Done.\n\tCreating table dev.hc_db.sl_heart_rate...Done.\n\tCreating table dev.hc_db.date_lookup...Done.\n\tCreating table dev.hc_db.sl_user_profile...Done.\n\tCreating table dev.hc_db.sl_complete_workout...Done.\n\tCreating table dev.hc_db.gd_workout_bpm_summary...Done.\n\tCreating table dev.hc_db.gd_gym_summary...Done.\nDone in  8 seconds.\nValidation started...\n\tChecking if database hc_db exits or not...Exist\n\tChecking if table bz_registered_users exists in the hc_db database...Exist\n\tChecking if table bz_gym_logins exists in the hc_db database...Exist\n\tChecking if table bz_kafka_multiplex exists in the hc_db database...Exist\n\tChecking if table sl_user_profile exists in the hc_db database...Exist\n\tChecking if table sl_workout_session exists in the hc_db database...Exist\n\tChecking if table sl_user_bins exists in the hc_db database...Exist\n\tChecking if table sl_gym_logins exists in the hc_db database...Exist\n\tChecking if table sl_heart_rate exists in the hc_db database...Exist\n\tChecking if table date_lookup exists in the hc_db database...Exist\n\tChecking if table sl_complete_workout exists in the hc_db database...Exist\n\tChecking if table sl_users exists in the hc_db database...Exist\n\tChecking if table gd_workout_bpm_summary exists in the hc_db database...Exist\nDone.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql.functions import lower\n",
     "\n",
     "class HelperTestSuit():\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.cls_obj = SetupHelper()\n",
-    "        self.data_dir = self.cls_obj.data_dir\n",
-    "        self.checkpoint_dir = self.cls_obj.checkpoint_dir\n",
-    "        self.catalog = self.cls_obj.catalog\n",
-    "        self.schema = self.cls_obj.schema\n",
-    "\n",
-    "    def cleanup(self):\n",
-    "        a = input('Do you want to cleanup the database and data/checkpoint locations? (y/n): ')\n",
-    "        if a.lower()=='y':\n",
-    "            print('Cleaning process:', )\n",
-    "            print(f'\\tDropping database {self.catalog}.{self.schema} ...', end='')\n",
-    "            spark.sql(f\"DROP DATABASE IF EXISTS {self.catalog}.{self.schema} CASCADE\")\n",
-    "            print('Done.')\n",
-    "            '''print(f'\\tDeleting & recreate data_dir {self.data_dir} ...', end='')\n",
-    "            dbutils.fs.rm(self.data_dir, True)\n",
-    "            dbutils.fs.mkdirs(self.data_dir)\n",
-    "            print('Done.')'''\n",
-    "            print(f'\\tDeleting & recreate checkpoint_dir {self.checkpoint_dir} ...', end='')\n",
-    "            dbutils.fs.rm(self.checkpoint_dir, True)\n",
-    "            dbutils.fs.mkdirs(self.checkpoint_dir)\n",
-    "            print('Done.')\n",
-    "        else:\n",
-    "            print('Skipping cleaning process!!!')\n",
+    "        conf = ConfigModule()\n",
+    "        self.data_dir = f\"{conf.base_file_path}/data\"\n",
+    "        self.checkpoint_dir = f\"{conf.base_checkpoint_path}/checkpoint\"\n",
+    "        self.catalog = conf.environment\n",
+    "        self.schema = conf.db_name\n",
     "    \n",
     "    def assert_database_exists(self, db_name):\n",
     "        print(f'\\tChecking if database {self.schema} exits or not...', end='')\n",
@@ -373,8 +362,6 @@
     "        print('Exist')\n",
     "    \n",
     "    def run_testcases(self):\n",
-    "        self.cleanup()\n",
-    "        self.cls_obj.launcher()\n",
     "        print(\"Validation started...\")\n",
     "        self.assert_database_exists(self.schema)\n",
     "        self.assert_table_exists('bz_registered_users')\n",
@@ -392,8 +379,8 @@
     "        #self.assert_table_exists('gd_gym_summary')\n",
     "        print('Done.')\n",
     "\n",
-    "obj = HelperTestSuit()\n",
-    "obj.run_testcases()"
+    "#obj = HelperTestSuit()\n",
+    "#obj.run_testcases()"
    ]
   }
  ],
@@ -408,7 +395,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": -1,
+     "commandId": 8562958330612008,
      "dataframes": [
       "_sqldf"
      ]
