--- a/Medallion Architecture Module/Bronze Module.ipynb
+++ b/Medallion Architecture Module/Bronze Module.ipynb
@@ -144,8 +144,8 @@
     "        for stream in spark.streams.active:\n",
     "            stream.awaitTermination()\n",
     "\n",
-    "obj = Bronze()\n",
-    "obj.launcher()\n"
+    "#obj = Bronze()\n",
+    "#obj.launcher()\n"
    ]
   },
   {
@@ -186,8 +186,8 @@
     "        self.assert_fn('bz_kafka_multiplex', \"topic='bpm'\", 5)\n",
     "        self.assert_fn('bz_kafka_multiplex', \"topic='workout'\", 2)\n",
     "\n",
-    "obj = BronzeTestSuite()\n",
-    "obj.testcases()"
+    "#obj = BronzeTestSuite()\n",
+    "#obj.testcases()"
    ]
   }
  ],
