--- a/History/history loader.ipynb
+++ b/History/history loader.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "%run \"/Repos/HealthCare project/HealthCare Project/Configuration/config file\""
+    "%run \"../Configuration/config file\""
    ]
   },
   {
@@ -125,7 +125,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "history_loader",
+   "notebookName": "history loader",
    "widgets": {}
   },
   "language_info": {
